test/types/tuple/diten/tupleExpandRecord.good
tupleExpandRecord.chpl:12: error: invalid tuple expand primitive
